--- a/index.html
+++ b/index.html
@@ -115,6 +115,49 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:var(--bg);color:var(
 ::-webkit-scrollbar-thumb{background:var(--border);border-radius:3px}
 .dashboard{display:none}
 .dashboard.visible{display:block}
+
+/* ===================== JARVIS CHAT WIDGET ===================== */
+#jarvisChatBtn{position:fixed;bottom:24px;right:24px;width:56px;height:56px;border-radius:50%;background:linear-gradient(135deg,#00d4ff 0%,#0088cc 100%);color:#fff;display:flex;align-items:center;justify-content:center;cursor:pointer;z-index:50000;box-shadow:0 4px 20px rgba(0,212,255,0.4);transition:all 0.3s ease;border:none}
+#jarvisChatBtn:hover{transform:scale(1.08);box-shadow:0 6px 30px rgba(0,212,255,0.6)}
+#jarvisChatBtn.hidden{opacity:0;pointer-events:none;transform:scale(0.5)}
+.jarvis-btn-glow{position:absolute;width:100%;height:100%;border-radius:50%;background:rgba(0,212,255,0.3);animation:jarvis-pulse 2.5s ease-in-out infinite;pointer-events:none}
+@keyframes jarvis-pulse{0%,100%{transform:scale(1);opacity:0.4}50%{transform:scale(1.4);opacity:0}}
+
+.jarvis-panel{position:fixed;bottom:24px;right:24px;width:400px;height:600px;max-height:calc(100vh - 48px);background:var(--surface);border:1px solid var(--border);border-radius:16px;z-index:50001;display:flex;flex-direction:column;overflow:hidden;box-shadow:0 8px 40px rgba(0,0,0,0.6),0 0 60px rgba(0,212,255,0.08);opacity:0;pointer-events:none;transform:translateY(20px) scale(0.95);transition:all 0.25s ease}
+.jarvis-panel.open{opacity:1;pointer-events:all;transform:translateY(0) scale(1)}
+
+.jarvis-panel-header{padding:14px 16px;border-bottom:1px solid var(--border);display:flex;align-items:center;justify-content:space-between;background:var(--surface2)}
+.jarvis-header-left{display:flex;align-items:center;gap:10px}
+.jarvis-avatar-dot{width:36px;height:36px;border-radius:50%;background:linear-gradient(135deg,#00d4ff,#0066aa);display:flex;align-items:center;justify-content:center;position:relative}
+.jarvis-avatar-dot::after{content:'J';color:#fff;font-weight:800;font-size:16px}
+.jarvis-avatar-dot::before{content:'';position:absolute;bottom:0;right:0;width:10px;height:10px;border-radius:50%;background:var(--green);border:2px solid var(--surface2)}
+.jarvis-header-name{font-size:14px;font-weight:700;color:var(--text)}
+.jarvis-header-sub{font-size:11px;color:var(--text-dim)}
+.jarvis-header-actions{display:flex;gap:4px}
+.jarvis-clear-btn,.jarvis-close-btn{background:none;border:none;color:var(--text-dim);cursor:pointer;padding:6px;border-radius:6px;transition:all 0.2s;display:flex;align-items:center;justify-content:center}
+.jarvis-clear-btn:hover,.jarvis-close-btn:hover{background:var(--surface);color:var(--text)}
+
+.jarvis-messages{flex:1;overflow-y:auto;padding:16px;display:flex;flex-direction:column;gap:12px}
+.jarvis-msg{display:flex;gap:8px;max-width:90%}
+.jarvis-msg-ai{align-self:flex-start}
+.jarvis-msg-user{align-self:flex-end;flex-direction:row-reverse}
+.jarvis-msg-bubble{padding:10px 14px;border-radius:12px;font-size:13px;line-height:1.5;word-wrap:break-word;white-space:pre-wrap}
+.jarvis-msg-ai .jarvis-msg-bubble{background:var(--surface2);color:var(--text);border-bottom-left-radius:4px}
+.jarvis-msg-user .jarvis-msg-bubble{background:linear-gradient(135deg,#00aadd,#0088bb);color:#fff;border-bottom-right-radius:4px}
+.jarvis-msg-typing{align-self:flex-start}
+.jarvis-msg-typing .jarvis-msg-bubble{background:var(--surface2);color:var(--text-dim);display:flex;gap:4px;padding:12px 18px}
+.jarvis-typing-dot{width:6px;height:6px;border-radius:50%;background:var(--text-dim);animation:jarvis-typing 1.4s ease-in-out infinite}
+.jarvis-typing-dot:nth-child(2){animation-delay:0.2s}
+.jarvis-typing-dot:nth-child(3){animation-delay:0.4s}
+@keyframes jarvis-typing{0%,60%,100%{transform:translateY(0);opacity:0.4}30%{transform:translateY(-4px);opacity:1}}
+
+.jarvis-input-area{padding:12px;border-top:1px solid var(--border);display:flex;gap:8px;align-items:flex-end;background:var(--surface)}
+.jarvis-input-area textarea{flex:1;background:var(--surface2);border:1px solid var(--border);color:var(--text);padding:10px 14px;border-radius:10px;font-size:13px;font-family:inherit;resize:none;outline:none;max-height:120px;line-height:1.4;transition:border-color 0.2s}
+.jarvis-input-area textarea:focus{border-color:var(--accent)}
+.jarvis-input-area textarea::placeholder{color:var(--text-dim)}
+#jarvisSendBtn{width:38px;height:38px;border-radius:10px;border:none;background:var(--accent);color:#000;cursor:pointer;display:flex;align-items:center;justify-content:center;transition:all 0.2s;flex-shrink:0}
+#jarvisSendBtn:hover{background:#33ddff}
+#jarvisSendBtn:disabled{opacity:0.3;cursor:not-allowed}
 </style>
 </head>
 <body>
@@ -188,6 +231,42 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:var(--bg);color:var(
 </div>
 
 <div class="toast" id="toast"></div>
+
+<!-- JARVIS CHAT WIDGET -->
+<div id="jarvisChatBtn" onclick="toggleJarvisChat()" title="Talk to Jarvis">
+  <div class="jarvis-btn-glow"></div>
+  <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"/></svg>
+</div>
+<div id="jarvisChatPanel" class="jarvis-panel">
+  <div class="jarvis-panel-header">
+    <div class="jarvis-header-left">
+      <div class="jarvis-avatar-dot"></div>
+      <div>
+        <div class="jarvis-header-name">Jarvis</div>
+        <div class="jarvis-header-sub">BLK Group AI</div>
+      </div>
+    </div>
+    <div class="jarvis-header-actions">
+      <button class="jarvis-clear-btn" onclick="clearJarvisChat()" title="New conversation">
+        <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M3 6h18M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6m3 0V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"/></svg>
+      </button>
+      <button class="jarvis-close-btn" onclick="toggleJarvisChat()">
+        <svg width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>
+      </button>
+    </div>
+  </div>
+  <div class="jarvis-messages" id="jarvisMessages">
+    <div class="jarvis-msg jarvis-msg-ai">
+      <div class="jarvis-msg-bubble">Hey Brandon. What do you need?</div>
+    </div>
+  </div>
+  <div class="jarvis-input-area">
+    <textarea id="jarvisInput" placeholder="Message Jarvis..." rows="1" onkeydown="handleJarvisKey(event)" oninput="autoResizeJarvisInput()"></textarea>
+    <button id="jarvisSendBtn" onclick="sendJarvisMessage()" title="Send">
+      <svg width="18" height="18" viewBox="0 0 24 24" fill="currentColor"><path d="M2.01 21L23 12 2.01 3 2 10l15 2-15 2z"/></svg>
+    </button>
+  </div>
+</div>
 <div class="modal-overlay" id="exportModal">
   <div class="modal">
     <h3>Export Mailing List</h3>
