Cache-bust app.js

--- a/index.html
+++ b/index.html
@@ -277,6 +277,6 @@ body{font-family:'Segoe UI',system-ui,sans-serif;background:var(--bg);color:var(
   </div>
 </div>
 
-<script src="app.js"></script>
+<script src="app.js?v=20260227-0547"></script>
 </body>
 </html>
